# auth-manager

./: .dockerignore  .gitignore  BACKLOG.org  EMAIL-TEMPLATES-SPEC.org  LICENSE  Makefile  OPERATOR-GUIDE.org  PLAN.org  README.md  package-lock.json  package.json  pom.xml
.github/workflows/: release-libs.yml
apps/admin-ui/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
apps/app1-backend/: Dockerfile  pom.xml
apps/app1-ui/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/auth-client-sample/: pom.xml
apps/auth-manager/: Dockerfile  pom.xml
deploy/cnpg/: pg-cluster.yaml
dev/: compose.yaml
dev/keycloak/: Dockerfile
dev/openresty/: Dockerfile  docker-entrypoint.sh  nginx.conf
dev/seed/: postgres-init.sh  realm.json
dev/smtp-relay/: Dockerfile  README.md  go.mod  main.go
libs/auth-lib-python/: README.md  pyproject.toml
libs/auth-lib-python/examples/fastapi_minimal/: README.md  main.py  requirements.txt
libs/auth-lib-python/src/mcpmesh_auth_lib/: __init__.py  config.py  dependencies.py  jwt_validator.py  me.py  models.py  permissions.py
libs/auth-lib-python/tests/: conftest.py  test_config.py  test_dependencies.py  test_jwt_validator.py  test_permissions.py
libs/auth-lib-react/: package.json  tsconfig.json  (+2 more)
scripts/: cf-firewall-setup.sh  cf-setup-tunnel.sh  demo-e2e.sh  deploy-app1.sh  deploy-beelink-dev.sh  deploy-beelink.sh  manifest-diff.py  provision-app1.sh  setup-oauth-providers.sh  setup-sendgrid-domain-auth.sh  theme-dev-sync.sh
(+364 files in other folders)
