[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "mcp-mesh-auth-lib"
version = "0.1.1"
description = "FastAPI client library for the mcp-mesh auth platform (JWT + UMA permission aggregation)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "mcp-mesh" }
]
keywords = ["fastapi", "keycloak", "oauth2", "uma", "jwt", "auth"]
classifiers = [
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "PyJWT[crypto]>=2.8",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "redis>=5.0",
    "cachetools>=5.3",
]

[project.urls]
Homepage = "https://github.com/dhyansraj/auth-manager"
Repository = "https://github.com/dhyansraj/auth-manager"
Issues = "https://github.com/dhyansraj/auth-manager/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "httpx>=0.27",
    "cryptography>=42",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcpmesh_auth_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
